fixed spacing

--- a/src/app/components/journal/journal.component.scss
+++ b/src/app/components/journal/journal.component.scss
@@ -1,3 +1,7 @@
 body {
   background-color: #38686A;
 }
+
+.container {
+  margin: 60px;
+}
