--- a/src/app/components/text-editor/text-editor.component.scss
+++ b/src/app/components/text-editor/text-editor.component.scss
@@ -59,7 +59,6 @@ $editTextBackgroundColor: #FFF;
 }
 
 .container {
-  margin: 20px;
   display: flex;
   flex-direction: column;
 }
